<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity3">
    <Button
        android:id="@+id/activity3_back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/back"
        android:background="@drawable/backbutton"
        android:shadowColor="#02020A" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F59B5F"
        android:textColor="#000000"
        android:gravity="center"
        android:paddingStart="150dp"
        android:paddingEnd="0dp"
        android:text="@string/bth_connect"
        android:textStyle="italic"
        android:textSize="50sp"
        android:fontFamily="Arial"
        android:paddingRight="0dp"
        android:paddingLeft="150dp" />


    <Button
        android:id="@+id/create_event"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:background="@drawable/submitbutton"
        android:shadowColor="#2D3EC4"
        android:layout_centerHorizontal ="true"
        android:layout_marginTop="400dp"
        android:text="@string/submit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="125dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="100dp"
            android:hint="@string/event_name"
            android:inputType="text"
            android:textColor="#000" />
        <EditText
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"
            android:layout_margin="5dp"
            android:inputType="time"
            android:textColor="#000" />
        <EditText
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location"
            android:layout_margin="5dp"
            android:inputType="text"
            android:textColor="#000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>


    </LinearLayout>


</RelativeLayout >