<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/activity3_back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/back"
        android:background="@drawable/backbutton"
        android:shadowColor="#02020A" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F59B5F"
        android:textColor="#000000"
        android:gravity="center"
        android:paddingStart="150dp"
        android:paddingEnd="0dp"
        android:text="@string/bth_connect"
        android:textStyle="italic"
        android:textSize="50sp"
        android:fontFamily="Arial"
        android:paddingRight="0dp"
        android:paddingLeft="150dp" />


    <Button
        android:id="@+id/activity2_create_poll"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:background="@drawable/pollbutton"
        android:shadowColor="#02020A"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/create_poll"
        android:layout_centerHorizontal ="true"
        android:layout_marginTop="350dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="125dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="100dp"
            android:hint="@string/event_name"
            android:inputType="text"
            android:textColor="#000"
            android:layout_marginLeft="100dp" />

        <EditText
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"
            android:layout_margin="5dp"
            android:inputType="time"
            android:textColor="#000" />
        <EditText
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location"
            android:layout_margin="5dp"
            android:inputType="text"
            android:textColor="#000" />

        <EditText
            android:id="@+id/Text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_date"
            android:layout_margin="5dp"
            android:inputType="date"
            android:textColor="#000" />


    </LinearLayout>


</RelativeLayout >