<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/xmlIndividualChatPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="ThisShouldNotBeHere"
        app:layout_constraintBottom_toTopOf="@+id/xmlIndividualScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/xmlIndividualScroll"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/xmlIndividualSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/xmlIndividualLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/xmlIndividualSend"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:textColor="#FFFFFF"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="135dp"
=======
>>>>>>> 4b186c52ee173646faa3ba41eccc272c61b78729
        android:text="@string/send"
        android:background="@drawable/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/xmlIndividualBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:background="@drawable/backbutton"
        android:text="@string/Back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/xmlIndividualScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
=======
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="32dp"
        android:text="@string/home"
        app:layout_constraintBottom_toTopOf="@+id/xmlIndividualScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/xmlIndividualScroll"
        app:layout_constraintTop_toTopOf="@+id/xmlIndividualChatPerson" />
>>>>>>> 4b186c52ee173646faa3ba41eccc272c61b78729

    <EditText
        android:id="@+id/xmlIndividualChatInput"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/xmlIndividualSend"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>